syntax = "proto3";
option go_package = "./proto";
import "google/protobuf/empty.proto";

message CreateWorkspaceRequest {
    string name = 1;
    repeated string repositories = 2;
}

message CreateWorkspaceResponse {
    string event = 1;
    string payload = 2;
}

message WorkspaceInfoRequest {
    string name = 1;
}

message WorkspaceProjectInfo {
    string name = 1;
    string created = 2;
    string started = 3;
    string finished = 4;
    bool isRunning = 5;
    string provisionerMetadata = 6;
}

message WorkspaceProvisioner {
    string name = 1;
    string profile = 2;
}

message WorkspaceInfoResponse {
    string name = 1;
    WorkspaceProvisioner provisioner = 2;
    repeated WorkspaceProjectInfo projects = 3;
    string provisionerMetadata = 4;
}

message WorkspacePortForwardResponse {
    uint32 containerPort = 1;
    uint32 hostPort = 2;
}

message WorkspaceStartRequest {
    string name = 1;
    string project = 2;
}

message WorkspaceStopRequest {
    string name = 1;
    string project = 2;
}

message WorkspaceRemoveRequest {
    string name = 1;
}

message WorkspaceListResponse {
    repeated WorkspaceInfoResponse workspaces = 1;
}

service Workspace {
    rpc Create (CreateWorkspaceRequest) returns (stream CreateWorkspaceResponse) {}
    rpc Info (WorkspaceInfoRequest) returns (WorkspaceInfoResponse) {}
    rpc List (google.protobuf.Empty) returns (WorkspaceListResponse) {}
    rpc Start (WorkspaceStartRequest) returns (google.protobuf.Empty) {}
    rpc Stop (WorkspaceStopRequest) returns (google.protobuf.Empty) {}
    rpc Remove (WorkspaceRemoveRequest) returns (google.protobuf.Empty) {}
}