syntax = "proto3";
option go_package = "./proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "grpc/proto/types/types.proto";

message GetNameResponse {
  string name = 1;
}

message GetVersionResponse {
  string version = 1;
}

message ConfigureResponse {
  google.protobuf.Struct config = 1;
}

service Provisioner {
  rpc GetName (google.protobuf.Empty) returns (GetNameResponse) {}
  rpc GetVersion (google.protobuf.Empty) returns (GetVersionResponse) {}
  rpc Configure (google.protobuf.Empty) returns (ConfigureResponse) {}
  
  rpc CreateWorkspace (Workspace) returns (google.protobuf.Empty) {}
  rpc StartWorkspace (Workspace) returns (google.protobuf.Empty) {}
  rpc StopWorkspace (Workspace) returns (google.protobuf.Empty) {}
  rpc DestroyWorkspace (Workspace) returns (google.protobuf.Empty) {}
  rpc GetWorkspaceInfo (Workspace) returns (WorkspaceInfo) {}

  rpc CreateProject(Project) returns (google.protobuf.Empty) {}
  rpc StartProject(Project) returns (google.protobuf.Empty) {}
  rpc StopProject(Project) returns (google.protobuf.Empty) {}
  rpc DestroyProject(Project) returns (google.protobuf.Empty) {}
  rpc GetProjectInfo(Project) returns (ProjectInfo) {}
}